--- a/hobbies.html
+++ b/hobbies.html
@@ -2,49 +2,84 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css" id="mainStyleSheet">
+    <script src="functions.js"></script>
     <title>My Hobbies</title>
 </head>
 <body>
-    <h1>My Hobbies</h1>
 
-    <div>
-        <h2>Playing Guitar</h2>
-        <p>I enjoy playing the guitar in my free time. I love rock and metal music so I have been trying to learn it
-            as a pastime. It has definetly been a challenging endeavor with many steep learning curves to climb, but the satisfaction of 
-            playing a new song correctly for the first time is one of the best there is. 
-        </p>
-        <img src="Guitar_1.jpg" alt="Guitar">
-    </div>
-
-    <div>
-        <h2>Tennis</h2>
-        <p>I started playing tennis right before the start of high school, but I soon fell in love with it and I played 3 years of High school
-            tennis as well as years of tournaments outside of school. Although I dont have the time I once had to dedicate to the sport, I love 
-            to play when I get the chance and I love to watch a good match if it is on TV.
-        </p>
-        <img src="tennis.jpg" alt="Tennis">
-    </div>
-
-    <div>
-        <h2>The Gym</h2>
-        <p>I've grown to love the gym because it's become a sanctuary for me this year. I started January when I decided to prioritize my health and fitness. 
-            The gym has not only transformed my physical well-being but has also become a source of mental clarity and stress relief, making it an integral part of my daily routine.</p>
-        <img src="gym.jpeg" alt="Gym">
-    </div>
-
-    <div>
-        <h2> AI Generated Page Prompt </h2>
-        <p> Make me an html page that lists hobbies out in order, Add sections for each of the hobies to add a paragraph of text for explanation and 
-            also add an area for an image. Add a navbar at the bottom with the home page (index.html) as the only link.    </p>
-    </div>
-
-   
-    <nav>
-        <ul class="navbar">
-          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+    <header>
+        <nav>
+          <ul class="navbar">
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="technical_portfolio.html" class="nav-link">Technical Portfolio</a></li>
+            <li class="nav-item"><a href="qualifications.html" class="nav-link">Qualifications</a></li>
+            <li class="nav-item"><a href="service.html" class="nav-link">Service</a></li>
+            <li class="nav-item"><a href="hobbies.html" class="nav-link">Hobbies - AI Generated</a></li>
+            <a href="https://www.tamu.edu/index.html"> 
+                <li class="logo">
+                    <img src="src/logo.png" alt="Logo">
+                </li>
+            </a>          
         </ul>
-    </nav>
+        </nav>
+      </header>
+
+    <div class="content">
+        <h1>My Hobbies</h1>
+
+        <div class="hobbies">
+            <h2>Playing Guitar</h2>
+            <p>I enjoy playing the guitar in my free time. I love rock and metal music so I have been trying to learn it
+                as a pastime. It has definetly been a challenging endeavor with many steep learning curves to climb, but the satisfaction of 
+                playing a new song correctly for the first time is one of the best there is. I started with an acoustic but I have upgraded to almost exclusively playing on my electric at the moment. 
+                Blues music has been a recent passion of mine and is something I hope to master one day, I have started learning more blues scales, chords, and licks to better improve my skills.
+            </p>
+            <img src="src/Guitar_1.jpg" alt="Guitar">
+        </div>
+
+        <div class="hobbies">
+            <h2>Tennis</h2>
+            <p>I started playing tennis right before the start of high school, but I soon fell in love with it and I played 3 years of High school
+                tennis as well as years of tournaments outside of school. Although I dont have the time I once had to dedicate to the sport, I love 
+                to play when I get the chance and I love to watch a good match if it is on TV and get out on the courts if the weather is good. When I am back in Austin, there is an abundance of courts
+                near my house so it is really easy to just pick up a set of racquets and go. The summer heat has slowed down my playing time, but hoping to play more in the Fall and Winter months.
+            </p>
+            <img src="src/tennis.jpg" alt="Tennis">
+        </div>
+
+        <div class="hobbies">
+            <h2>The Gym</h2>
+            <p>I've grown to love the gym as it has become a sanctuary for me this year. I started January when I decided to prioritize my health and fitness and the gym has not only transformed my physical 
+                well-being but has also become a source of mental clarity and stress relief. I love the rush of endorphins that hit after a workout and I have made an effort to go everyday in the mornings. I feel as if
+                working out in the mornings seems to start my day off right and makes me feel more productive in the mornings as well. The gym has affected other parts of my daily routine as well, making me focus more on my
+                nutrition, sleep, water intake, and other factors that are important for progress in the gym and just everyday wellbeing. I can definetly say this addition to my dailty routine has added immense benefits./p>
+            <img src="src/gym.jpeg" alt="Gym">
+        </div>
+
+        <div class="hobbies">
+            <h2> AI Generated Page Prompt </h2>
+            <p> Make me an html page that lists hobbies out in order, Add sections for each of the hobies to add a paragraph of text for explanation and 
+                also add an area for an image. Add a navbar at the top with the home page (index.html) and all other links populated on the side bar as well. 
+                Add custom styling classes for all sections and divs. Include comments explaining all styling and their respective purpose.    </p>
+        </div>
+    </div>
+
+    <div class="butLogic">
+        <button onclick="toggleStyleSheet()" type="button">Toggle Style</button>
+        <script src="functions.js"></script>
+    </div>
+  
+
+    <nav class="footnote">
+        <ul>
+          <li><a href="https://github.com/autagikar" target="_blank">Github</a></li>
+          <li><a href="https://www.linkedin.com/in/anirudh-u-640437223/" target="_blank">Linkedin</a></li>
+          <li><a href="https://www.instagram.com/a.utagikar/" target="_blank">Instagram</a></li>
+          <li><a href="https://twitter.com/utag_a6" target="_blank">Twitter</a></li>
+        </ul>
+      </nav>
+
   
 </body>
 </html>
