--- a/service.html
+++ b/service.html
@@ -2,30 +2,84 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Service Showcase</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" id="mainStyleSheet">
+    <script src="functions.js"></script>
+    <title>Service</title>
 </head>
 <body>
-    <h1>Service Showcase</h1>
 
-    <div class="service">
-        <img src="goodwill.png" alt="Service 1">
-        <h2>Goodwill Computer Works</h2>
-        <p>January 2018 - June 2018</p>
-        <h3>Computer Works Mananger</h3>
-        <p>Helped manage the Goodwill Computer Works department for South Austin's Goodwill. Department was responsible for stocking electronics,
-            disassembling donated computer for recycling, and refurbishing goods to resell.
-        </p>
+    <header>
+        <nav>
+          <ul class="navbar">
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="technical_portfolio.html" class="nav-link">Technical Portfolio</a></li>
+            <li class="nav-item"><a href="qualifications.html" class="nav-link">Qualifications</a></li>
+            <li class="nav-item"><a href="service.html" class="nav-link">Service</a></li>
+            <li class="nav-item"><a href="hobbies.html" class="nav-link">Hobbies - AI Generated</a></li>
+            <a href="https://www.tamu.edu/index.html"> 
+                <li class="logo">
+                    <img src="src/logo.png" alt="Logo">
+                </li>
+            </a>          </ul>
+        </nav>
+      </header>
+
+    <div class="content">
+
+        <h1>Service Showcase</h1>
+
+        <!-- Parent container to hold the sections side by side -->
+    <div class="container">
+        <!-- First section with an image -->
+        <section>
+            <img src="src/goodwill.png" alt="Service 1" class="small-image">
+        </section>
+  
+        <!-- Second section with text content -->
+        <section>
+            <h2>Goodwill Computer Works</h2>
+            <p>January 2018 - June 2018</p>
+            <h3>Computer Works Mananger</h3>
+            <p>Helped manage the Goodwill Computer Works department for South Austin's Goodwill. Department was responsible for stocking electronics,
+                disassembling donated computer for recycling, and refurbishing goods to resell.
+            </p>
+            <p>Visit <a href="https://www.goodwill.com">Goodwill.com</a></p>
+
+        </section>
+      </div>
+
+      <div class="container">
+        <!-- First section with an image -->
+        <section>
+            <img src="src/library.jpg" alt="Library Image Not Found" class="small-image">
+        </section>
+  
+        <!-- Second section with text content -->
+        <section>
+            <h2>Lake Travis Library</h2>
+            <p>June 2019 - January 2020</p>
+            <h3>Library Volunteer</h3>
+            <p>Helped stock books for the libary, helped coordinate summer events for childrens area during the daytime.</p>
+            <p>Visit <a href="https://laketravislibrary.org/">Lake Travis Library Website</a></p>
+        </section>
+      </div>
+      
     </div>
 
-    <div class="service">
-        <img src="libary.jpg" alt="Library Image Not Found">
-        <h2>Lake Travis Library</h2>
-        <p>June 2019 - January 2020</p>
-        <h3>Library Volunteer</h3>
-        <p>Helped stock books for the libary, helped coordinate summer events for childrens area during the daytime.</p>
+    <div class="butLogic">
+        <button onclick="toggleStyleSheet()" type="button">Toggle Style</button>
+        <script src="functions.js"></script>
     </div>
+  
 
-    
+    <nav class="footnote">
+        <ul>
+          <li><a href="https://github.com/autagikar" target="_blank">Github</a></li>
+          <li><a href="https://www.linkedin.com/in/anirudh-u-640437223/" target="_blank">Linkedin</a></li>
+          <li><a href="https://www.instagram.com/a.utagikar/" target="_blank">Instagram</a></li>
+          <li><a href="https://twitter.com/utag_a6" target="_blank">Twitter</a></li>
+        </ul>
+      </nav>
+
 </body>
 </html>
