--- a/service.html
+++ b/service.html
@@ -40,9 +40,9 @@
             <h2>Goodwill Computer Works</h2>
             <p>January 2018 - June 2018</p>
             <h3>Computer Works Mananger</h3>
-            <p>Helped manage the Goodwill Computer Works department for South Austin's Goodwill. Department was responsible for stocking electronics,
-                disassembling donated computer for recycling, and refurbishing goods to resell.
+            <p>In my role, I oversaw and enhanched the operations of the Goodwill Computer Works department, located in the heart of South Austin. At the core of our mission was the responsible management of a diverse range of electronics, spanning from cutting-edge gadgets to timeless tech relics. This encompassed the meticulous disassembly of donated computers for environmentally conscious recycling practices and the artful refurbishment of goods to breathe new life into them for resale.
             </p>
+            <p>Our team's dedication went beyond the mere management of products and led to a commitment to sustainability, community impact, etc. Through our efforts, we not only kept electronics out of landfills but also provided access to affordable, reliable technology for families in need. It was a gratifying experience, knowing that our work was contributing to a brighter future for both our planet and our local community." </p>
             <p>Visit <a href="https://www.goodwill.com">Goodwill.com</a></p>
 
         </section>
@@ -59,7 +59,8 @@
             <h2>Lake Travis Library</h2>
             <p>June 2019 - January 2020</p>
             <h3>Library Volunteer</h3>
-            <p>Helped stock books for the libary, helped coordinate summer events for childrens area during the daytime.</p>
+            <p>As a Library Assistant, I played a pivotal role in maintaining the library's extensive collection, ensuring accessibility to a wide range of knowledge resources. My responsibilities extended beyond book stocking, encompassing meticulous organization, cataloging, and maintaining an efficient library environment. </p>
+            <p>I was also tasked with the role of Children's Events Coordinator. During daytime hours, I orchestrated a diverse range of engaging and educational summer events in the children's area. These events were designed to foster learning and creativity while providing a safe and enriching environment for young adults.  </p>
             <p>Visit <a href="https://laketravislibrary.org/">Lake Travis Library Website</a></p>
         </section>
       </div>
